# MoonRover

./: .gitignore  AGENTS.md  CLAUDE.md  CREATION_SUMMARY.txt  FILES_MANIFEST.txt  Genesis_Moon_Rover_Architecture.docx  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  README_STUBS.md  STUB_FILES_CREATED.txt  STUB_FILES_SUMMARY.txt  pyproject.toml
configs/: experiment.yaml  mission.yaml  physics.yaml  rover.yaml  scene.yaml  sensors.yaml
docs/: INSTALL.md  SUBSYSTEM_MAP.md
scripts/: benchmark_physics.py  demo_cable_pull.py  demo_dashboard.py  demo_data_pipeline.py  demo_rover_drive.py  validate_navigation.py  verify_physics.py  view_regolith.py  view_terrain.py
src/moon_rover/: __init__.py  cli.py
src/moon_rover/antenna/: __init__.py  system.py
src/moon_rover/cable/: __init__.py  chain.py
src/moon_rover/core/: __init__.py
src/moon_rover/core/assets/: __init__.py  genesis_urdf_builder.py  material_library.py  urdf_builder.py
src/moon_rover/core/physics/: __init__.py  _genesis_engine.py  engine.py
src/moon_rover/core/scene/: __init__.py  antenna_composer.py  cable_composer.py  composer.py  moonbase_composer.py  rover_composer.py  sensor_registrar.py  specs.py  terrain_composer.py
src/moon_rover/data/: __init__.py
src/moon_rover/data/analysis/: __init__.py  metrics.py
src/moon_rover/data/logging/: __init__.py  streams.py
src/moon_rover/data/replay/: __init__.py  checkpoint.py
src/moon_rover/environment/: __init__.py
src/moon_rover/environment/dust/: __init__.py  sph_model.py
src/moon_rover/environment/lighting/: __init__.py  lunar_solar.py  solar.py
src/moon_rover/environment/regolith/: __init__.py  genesis_mpm.py  mpm_model.py
src/moon_rover/mission/: __init__.py  coordinator.py  lunar_manager.py  manager.py  relay_coordinator.py
src/moon_rover/moonbase/: __init__.py  base.py
src/moon_rover/navigation/: __init__.py
src/moon_rover/rl/: __init__.py
src/moon_rover/rover/: __init__.py
src/moon_rover/scenarios/: __init__.py  missions.py  runner.py
src/moon_rover/sensors/: __init__.py  _raycast.py
src/moon_rover/testing/: __init__.py  validators.py
src/moon_rover/visualization/: __init__.py
tests/: conftest.py
tests/integration/: test_antenna_placement_mission.py  test_default_terramechanics.py
tests/physics/: conftest.py  test_genesis_engine.py
tests/physics_real/: __init__.py  _helpers.py  test_real_genesis_contacts.py  test_real_genesis_fall_and_seed.py  test_real_genesis_mpm_regolith.py  test_real_genesis_raycaster.py  test_real_genesis_snapshot.py  test_real_genesis_teardown.py
tests/scene/: test_scene_composer.py  test_scene_contract.py  test_scene_genesis_integration.py
tests/unit/: test_data_analysis_metrics.py  test_data_logging_streams.py  test_data_replay_checkpoint.py  test_drive_kinematics.py  test_genesis_mpm_regolith.py  test_genesis_urdf_builder.py  test_lunar_solar.py  test_lunar_terrain_generator.py  test_lunar_thermal.py  test_lunar_wheel_terrain.py  test_mission_manager.py  test_rl_seam.py  test_rover_power.py  test_scenario_runner.py  test_scripted_policies.py  test_sensors.py  test_serial_arm.py  test_subsystems.py
(+62 files in other folders)
